nemesiincludedir =	$(includedir)/nemesi
noinst_HEADERS	= 	bufferpool.h \
			etui.h \
			main.h \
			methods.h \
			rtp.h \
			rtpptdefs.h \
			rtcp.h \
			rtsp.h \
			version.h \
			wsocket.h \
			utils.h \
			comm.h \
			md5.h \
			md5global.h \
			types.h \
			preferences.h \
			diskwriter.h \
			audio.h \
			img_format.h \
			output.h \
			video_driver.h \
			video_drivers.h \
			video_img.h
INCLUDES = $(top_srcdir)
