nemesiincludedir =	$(includedir)/nemesi
noinst_HEADERS	=	audio_driver.h \
			audio_drivers.h
			audio.h \
			bufferpool.h \
			comm.h \
			decoder.h \
			diskwriter.h \
			etui.h \
			img_format.h \
			main.h \
			md5global.h \
			md5.h \
			methods.h \
			output.h \
			preferences.h \
			rtcp.h \
			rtp.h \
			rtpptdefs.h \
			rtsp.h \
			types.h \
			utils.h \
			version.h \
			video_driver.h \
			video_drivers.h \
			video.h \
			video_img.h \
			wsocket.h

INCLUDES = $(top_srcdir)
