noinst_HEADERS	=	audio_driver.h \
			audio_drivers.h
			audio_format.h \
			audio.h \
			ccprefs.h \
			decoder.h \
			diskwriter.h \
			egui.h \
			etui.h \
			img_format.h \
			main.h \
			output.h \
			plugin.h
			preferences.h \
			version.h \
			video_driver.h \
			video_drivers.h \
			video_img.h \
			video.h
